Index: added responsiveness to upper header, partly added to header, added mobile menu toggle fn, changed folder structure for imgs

--- a/common-blocks/_card.scss
+++ b/common-blocks/_card.scss
@@ -9,26 +9,29 @@
   // background: url('../../../images/exterior-1.jpg') no-repeat;
   // background-size: cover;
 
-  transition: .3s all ease;
+  // transition: .2s all ease;
 }
 
 .card:hover {
   background: none;
   background-color: #fff;
-  outline: 1px solid black;
+  // outline: 1px solid black;
+  z-index: 10;
+  // transition: .2s all ease;
 }
 
 .card:hover .card__info {
   visibility: visible;
   opacity: 1;
-  transition: .2s all ease;
+  // transition: .2s all ease;
 }
 
 .card__info {
   background-color: #fff;
   visibility: hidden;
   opacity: 0;
-  transition: .2s all ease;
+  // transition: .2s all ease;
+  z-index: 10;
 }
 
 .card__category {
@@ -48,7 +51,7 @@
 
   font-weight: bold;
   font-size: 25px;
-  line-height: 20px;
+  // line-height: 20px;
   letter-spacing: .03em;
   text-transform: uppercase;
 }
@@ -90,7 +93,7 @@
 
 .card__link:hover {
   transform: translateX(5px);
-  transition: .3s transform ease;
+  transition: .2s transform ease;
 }
 
 .card__link::after {
