--- a/pages/about/css/about.scss
+++ b/pages/about/css/about.scss
@@ -1,15 +1,13 @@
 // @import '../../common/_fonts';
-@import '../../../common/_vars';
-@import '../../../common/_mixins';
+@import "../../../common/_vars";
+@import "../../../common/_mixins";
 
-
-@import '../../../common/common.styles';
-@import '../../../blocks/_upper-header';
-@import '../../../blocks/services/_services';
-@import '../../../blocks/_brands';
-@import '../../../blocks/_socials';
-@import '../../../blocks/_footer';
-
+@import "../../../common/common.styles";
+@import "../../../blocks/_upper-header";
+@import "../../../blocks/services/_services";
+@import "../../../blocks/_brands";
+@import "../../../blocks/_socials";
+@import "../../../blocks/_footer";
 
 // :root {
 //   box-sizing: border-box;
@@ -28,7 +26,6 @@
 // }
 
 // body {
- 
 
 //   overflow-x: hidden;
 //   // display: flex;
@@ -55,7 +52,6 @@
 
 .header__menu-item-link,
 .header__call-link {
-
   color: #000;
 }
 
@@ -75,11 +71,10 @@
   }
 }
 
-
 .header__title {
   font-weight: bold;
   font-size: 57px;
-  line-height: 60px;
+  // line-height: 60px;
   max-width: 550px;
 }
 
@@ -100,7 +95,6 @@
 
   background: url(/images/about/office-meeting.jpg) no-repeat 0 -250px;
   background-size: cover;
-
 }
 
 @media screen and (max-width: 1350px) {
@@ -144,8 +138,6 @@
     width: 50%;
 
     position: relative;
-
-
   }
 
   .idea__title {
@@ -156,12 +148,13 @@
 
     margin-bottom: 235px;
 
+    @include font(700, 1.5rem);
 
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 20px;
+    // font-weight: bold;
+    // font-size: 24px;
+    // line-height: 20px;
 
-    text-transform: uppercase;
+    // text-transform: uppercase;
   }
 
   @media screen and (max-width: 1550px) {
@@ -185,7 +178,6 @@
       width: 300px;
     }
   }
-
 
   .idea__video-container {
     max-width: 900px;
@@ -211,7 +203,6 @@
   //   }
   // }
 
-
   .idea__poster {
     width: 100%;
     height: 100%;
@@ -233,13 +224,13 @@
     border-radius: 50%;
     @extend %centering-flex-container;
 
-    transition: .2s all ease;
+    transition: 0.2s all ease;
   }
 
   .idea__poster:hover .idea__play-btn {
     background-color: #fff;
 
-    transition: .2s all ease;
+    transition: 0.2s all ease;
   }
 
   .idea__poster-arrow {
@@ -285,11 +276,14 @@
 
   .idea__lower-title {
     border-bottom: 1px solid #000;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 20px;
+
+    @include font(700, 1.5rem);
     letter-spacing: 0.03em;
-    text-transform: uppercase;
+
+    // font-weight: bold;
+    // font-size: 24px;
+    // line-height: 20px;
+    // text-transform: uppercase;
 
     margin-bottom: 80px;
   }
@@ -299,7 +293,6 @@
     text-align: center;
     margin-left: auto;
 
-
     font-weight: normal;
     font-size: 15px;
     line-height: 140%;
@@ -307,7 +300,6 @@
 }
 
 .team {
-
   .team__upper {
     padding-top: 250px;
     margin-bottom: 120px;
@@ -325,10 +317,12 @@
     text-align: right;
     border-bottom: 1px solid #000;
 
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 20px;
-    text-transform: uppercase;
+    @include font(700, 1.5rem)
+
+    // font-weight: bold;
+    // font-size: 25px;
+    // line-height: 20px;
+    // text-transform: uppercase;
   }
 
   @media screen and (max-width: 1550px) {
@@ -339,7 +333,6 @@
 
   .team__lower {
     display: flex;
-
   }
 
   .team__person {
@@ -357,23 +350,25 @@
 
     padding: 35px 45px 35px 35px;
 
-    transition: .5s all ease;
-
+    transition: 0.5s all ease;
   }
 
   .team__person-info--active {
     visibility: visible;
     opacity: 1;
-    transition: .5s all ease;
+    transition: 0.5s all ease;
   }
 
   .team__person-title {
     margin-bottom: 85px;
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 20px;
-    text-transform: uppercase;
-    color: $accent-color;
+
+    @include font(700, 1.5rem, $accent-color);
+
+    // font-weight: bold;
+    // font-size: 25px;
+    // line-height: 20px;
+    // text-transform: uppercase;
+    // color: $accent-color;
   }
 
   .team__person-text {
@@ -383,21 +378,22 @@
 
     margin-bottom: 265px;
 
+    @include font(400, 1rem);
 
-    font-weight: normal;
-    font-size: 15px;
+    // font-weight: normal;
+    // font-size: 15px;
+    
     line-height: 140%;
   }
 
   .team__person-photo {
     opacity: 1;
-    transition: .2s all ease;
-
+    transition: 0.2s all ease;
   }
 
   .team__person-photo--inactive {
     opacity: 0;
-    transition: .2s all ease;
+    transition: 0.2s all ease;
     visibility: hidden;
   }
 
@@ -408,10 +404,6 @@
     bottom: 0;
     left: 20%;
   }
-
-
-
-
 }
 
 // .footer {
@@ -427,7 +419,6 @@
 //   padding-right: 60px;
 //   padding-left: 60px;
 
-
 //   .footer__rights-span {
 //     margin-top: 10px;
 //     display: block;
@@ -441,7 +432,6 @@
 //     font-size: 14px;
 //     line-height: 170%;
 //   }
-
 
 //   .footer__menu-item:not(:last-child) {
 //     margin-bottom: 10px;
