--- a/ancillary-styles/_common.styles.scss
+++ b/ancillary-styles/_common.styles.scss
@@ -12,17 +12,20 @@
 body {
   // width: 100vw;
   overflow-x: hidden;
+  // overflow: hidden;
   font-family: $main-font-family, sans-serif; // add default fonts list
 }
 
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6 {
-//   text-transform: uppercase;
-// }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: uppercase;
+  line-height: 80%;
+}
 
 a {
   text-decoration: none;
