--- a/common-blocks/_brands.scss
+++ b/common-blocks/_brands.scss
@@ -6,10 +6,8 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  
   padding: 200px 0;
 }
-
 
 @media screen and (max-width: 1550px) {
   .brands__container {
@@ -21,27 +19,26 @@
   width: 150px;
   height: 45px;
 
-  background: url(/images/brands/creative.png) no-repeat;
+  background: url("/images/common-blocks/brands/creative.png") no-repeat;
 }
 
 .brands__item--second {
   width: 141px;
   height: 37px;
 
-  background: url(/images/brands/at.png) no-repeat;
+  background: url("/images/common-blocks/brands/at.png") no-repeat;
 }
 
 .brands__item--third {
   width: 104px;
   height: 38px;
 
-  background: url(/images/brands/neuton.png) no-repeat;
+  background: url("/images/common-blocks/brands/neuton.png") no-repeat;
 }
 
 .brands__item--fourth {
   width: 135px;
   height: 35px;
 
-  background: url(/images/brands/francois.png) no-repeat;
-
+  background: url("/images/common-blocks/brands/francois.png") no-repeat;
 }
