--- a/common-blocks/services/_services.scss
+++ b/common-blocks/services/_services.scss
@@ -22,7 +22,7 @@
     border-bottom: 1px solid #000;
     text-align: right;
     @include font(700, 25px);
-    line-height: 22px;
+    // line-height: 22px;
   }
 
   @media screen and (max-width: 1550px) {
